1.6.8: ?
 * Changed the order of exported HTML and CSV notebooks so that after all the
   "startup" notes are included, the remaining notes are included in
   alphabetical order (instead of reverse chronological order).
 * Instead of converting unsupported HTML tags to plain text when a note is
   saved, Luminotes now simply strips out all unsupported tags. This further
   improves copy and pasting text from programs like MS Word.
 * Fixed a compatibility problem with newer versions of SQLite. (Luminotes
   was using a reserved keyword as an identifier.) This only affected those
   people who installed Luminotes Server themselves.

1.6.7: February 23, 2009
 * When you export your notebook as an HTML or CSV file, the saved filename is
   now based on the name of your notebook, for instance "my-to-do-list.html"
   or "ideas-for-my-novel.csv".
 * Several minor improvements to CSV importing and exporting.
 * Converted the existing HTML and CSV export features to work as separate
   export plugins. This means that a new export format can be implemented as
   a new plugin.
 * There is now a downloadable free trial for Luminotes Desktop!

1.6.6: February 16, 2009
 * Luminotes now recognizes "mailto:" links as external links, so you can
   include links to email addresses within your notes.
 * Several Luminotes Desktop improvements:
   * There is now a "close" link at the top of the page to completely shut
     down the process when you're done using Luminotes.
   * Luminotes Desktop now attempts to always run on a particular port number,
     which means that as long as it's running you can reach it from a constant
     web address.
   * You can now copy the Luminotes Desktop web address and paste it into
     another web browser without getting an error message.
 * Now, if you copy a link from another web page and paste it into a note,
   Luminotes properly recognizes it as an external link (rather than a link to
   a note).